[package]
name = "ink_model"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://github.com/paritytech/ink/wiki"
homepage = "https://www.parity.io/"
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
ink_core = { path = "../core", default-features = false }
scale = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive", "full"] }

[features]
default = ["test-env"]
test-env = [
	"std",
	"ink_core/test-env",
]
std = [
	"ink_core/std",
	"scale/std",
]
