[package]
name = "pdsl_core"
version = "0.1.0"
authors = ["Herobird <robbepop@web.de>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.md"

# repository = "https://github.com/robbepop/substrate-contract"
# homepage = "https://github.com/robbepop/substrate-contract"
# documentation = "https://robbepop.github.io/pwasm-abi/substrate-contract/"

description = "[pDSL: Parity eDSL] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
parity-codec = { version = "2.0" }
parity-codec-derive = { version = "2.0" }
tiny-keccak = "1.4"
log = "0.4"

[features]
default = []
test-env = []
