[package]
name = "pdsl_derive"
version = "0.1.0"
authors = ["Herobird <robbepop@web.de>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.md"

# repository = "https://github.com/robbepop/substrate-contract"
# homepage = "https://github.com/robbepop/substrate-contract"
# documentation = "https://robbepop.github.io/pwasm-abi/substrate-contract/"

description = "[pDSL: Parity eDSL] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
pdsl_core = { path = "../pdsl_core/" }

quote = "0.6"
syn = { version = "0.15", features = ["parsing", "full", "extra-traits"] }
proc-macro2 = "0.4"

parity-codec = { version = "2.0" }
parity-codec-derive = { version = "2.0" }

itertools = "0.7"

[lib]
name = "pdsl"
proc-macro = true
