[package]
name = "pdsl_tests"
version = "0.1.0"
authors = ["Robin Freyler <robbepop@web.de>"]
edition = "2018"
description = "Tests for the Substrate smart constracts Rust eDSL"
license = "GPL-3.0"
# readme = "README.md"
# repository = "https://github.com/robbepop/pdsl"
# documentation = "https://docs.rs/pdsl"
# homepage =
# keywords   = []
# categories = []

[lib]
crate-type = ["cdylib"]
name = "pdsl_tests"

[dependencies]
pdsl_core = { path = "../pdsl_core" }
parity-codec = { version = "2.2", default-features = false, features = ["derive"] }

[features]
test-env = ["pdsl_core/test-env"]
