[package]
name = "{{name}}"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_abi = { git = "https://github.com/paritytech/ink", package = "ink_abi", default-features = false, optional = true }
ink_core = { git = "https://github.com/paritytech/ink", package = "ink_core", default-features = false }
ink_model = { git = "https://github.com/paritytech/ink", package = "ink_model", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", package = "ink_lang", default-features = false }
scale = { package = "parity-scale-codec", version = "1.0", default-features = false, features = ["derive"] }

[lib]
name = "{{name}}"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_core/std",
    "ink_model/std",
    "ink_lang/std",
    "scale/std",
]
test-env = [
    "std",
    "ink_core/test-env",
    "ink_model/test-env",
    "ink_lang/test-env",
]
generate-api-description = [ # Outdated: TODO removed as soon as ink_abi lands
    "ink_lang/generate-api-description"
]
generate-abi = [
	"std",
	"ink_abi",
	"ink_lang/generate-abi",
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[workspace]
members = [
	".tools/"
]
