[package]
name = "{{name}}"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_core = { git = "https://github.com/paritytech/ink", package = "ink_core", default-features = false }
ink_model = { git = "https://github.com/paritytech/ink", package = "ink_model", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", package = "ink_lang", default-features = false }
parity-codec = { version = "4.1", default-features = false, features = ["derive"] }

[lib]
name = "{{name}}"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_core/std",
    "ink_model/std",
    "ink_lang/std",
    "parity-codec/std",
]
test-env = [
    "std",
    "ink_core/test-env",
    "ink_model/test-env",
    "ink_lang/test-env",
]
generate-api-description = [
    "ink_lang/generate-api-description"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true
