[package]
name = "{{name}}"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_abi = { git = "https://github.com/paritytech/ink", package = "ink_abi", default-features = false, features = ["derive"], optional = true }
ink_core = { git = "https://github.com/paritytech/ink", package = "ink_core", default-features = false }
ink_lang2 = { git = "https://github.com/paritytech/ink", package = "ink_lang2", default-features = false }

scale = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", default-features = false, features = ["derive"], optional = true }

[lib]
name = "{{name}}"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["test-env"]
std = [
    "ink_abi/std",
    "ink_core/std",
    "scale/std",
    "type-metadata/std",
]
test-env = [
    "std",
    "ink_core/test-env",
    "ink_lang2/test-env",
]
ink-generate-abi = [
    "std",
    "ink_abi",
    "type-metadata",
    "ink_core/ink-generate-abi",
    "ink_lang2/ink-generate-abi",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[workspace]
members = [
	".ink/abi_gen"
]
exclude = [
	".ink"
]
