[package]
name = "ink_core_derive"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
ink_primitives = { path = "../../primitives", default-features = false }
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
synstructure = "0.12"

[dev-dependencies]
ink_core = { path = ".." }
trybuild = "1.0"

[features]
default = ["std"]
std = [
    "ink_primitives/std",
]
