[package]
name = "ink_core_derive"
version = "2.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
synstructure = "0.12.4"

[dev-dependencies]
ink_primitives = { version = "2.1.0", path = "../../primitives" }
ink_metadata = { version = "2.1.0", path = "../../metadata" }
ink_core = { version = "2.1.0", path = ".." }
