[package]
name = "ink_allocator"
documentation = "https://docs.rs/ink_allocator/"

version.workspace = true
authors.workspace = true
edition.workspace = true

license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
default = ["std"]
std = []
ink-fuzz-tests = ["std"]
