[package]
name = "ink_allocator"
version.workspace = true
authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
edition.workspace = true

license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ink_allocator/"
homepage.workspace = true
description = "[ink!] Bindings to the Wasm heap memory allocator."
keywords.workspace = true
categories.workspace = true
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
cfg-if = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[features]
default = ["std"]
std = []
ink-fuzz-tests = ["std"]
no-allocator = []
