[package]
name = "ink_build_script_utils"
version = "3.2.0"
authors = ["Petar Ivanov <dartdart26@gmail.com>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://docs.rs/ink_build_script_utils/"
homepage = "https://www.parity.io/"
description = "[ink!] Utilities for `build.rs` scripts."
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
