[package]
name = "ink_e2e"
version.workspace = true
authors.workspace = true
edition.workspace = true

license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ink_e2e/"
homepage.workspace = true
description = "[ink!] End-to-end testing framework for smart contracts."
keywords.workspace = true
categories.workspace = true
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
ink_e2e_macro = { workspace = true, default-features = true }
ink = { workspace = true, default-features = true }
ink_env = { workspace = true, default-features = true }
ink_primitives = { workspace = true, default-features = true }
ink_sandbox = { version = "=6.0.0-alpha", path = "./sandbox", optional = true }

cargo_metadata = { workspace = true }
contract-build = { workspace = true }
pallet-revive = { workspace = true }
pallet-revive-mock-network = { workspace = true, optional = true }
funty = { workspace = true }
impl-serde = { workspace = true }
jsonrpsee = { workspace = true, features = ["ws-client"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
scale = { workspace = true }
subxt = { workspace = true }
subxt-metadata = { workspace = true, optional = true }
subxt-signer = { workspace = true, features = ["subxt", "sr25519", "unstable-eth"] }
thiserror = { workspace = true }
which = { workspace = true }

# Substrate
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }
regex = "1.11.1"
itertools = "0.14.0"

[dev-dependencies]
# Required for the doctest of `MessageBuilder::call`
scale-info = { workspace = true, features = ["derive"] }

[features]
default = [ "std" ]
std = [
	"impl-serde/std",
	"ink_e2e_macro/std",
	"pallet-revive/std",
	"scale-info/std",
	"scale/std",
	"serde/std",
	"sp-core/std",
	"sp-keyring/std",
	"sp-runtime/std",
	"sp-weights/std",
	"ink_e2e_macro/std",
	"ink_sandbox/std",
	"frame-support/std",
	"pallet-revive-mock-network?/std",
]

sandbox = [
    "dep:ink_sandbox",
    "subxt-metadata",
    "pallet-revive-mock-network",
    "ink_e2e_macro/sandbox",
]
