[package]
name = "ink_e2e"
version.workspace = true
authors.workspace = true
edition.workspace = true

license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ink_e2e/"
homepage.workspace = true
description = "[ink!] End-to-end testing framework for smart contracts."
keywords.workspace = true
categories.workspace = true
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
ink_e2e_macro = { workspace = true, default-features = true }
ink = { workspace = true, default-features = true }
ink_env = { workspace = true, default-features = true }
ink_primitives = { workspace = true, default-features = true }
ink_sandbox = { version = "=6.0.0-alpha.4", path = "./sandbox", optional = true }

cargo_metadata = { workspace = true }
contract-build = { workspace = true }
pallet-revive = { workspace = true }
funty = { workspace = true }
impl-serde = { workspace = true }
jsonrpsee = { workspace = true, features = ["ws-client"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
scale = { workspace = true }
subxt = { workspace = true }
subxt-metadata = { workspace = true, optional = true }
subxt-signer = { workspace = true, features = ["subxt", "sr25519", "unstable-eth"] }
thiserror = { workspace = true }
which = { workspace = true }
sha3 = "0.10"

# Substrate
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }
regex = "1.11.2"
itertools = "0.14.0"

sp-io = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime-interface = { git = "https://github.com/use-ink/polkadot-sdk.git", rev = "a71ec19a94702ea71767ba5ac97603ea6c6305c1", default-features = false, features = ["disable_target_static_assertions"] }

[dev-dependencies]
# Required for the doctest of `MessageBuilder::call`
scale-info = { workspace = true, features = ["derive"] }

[features]
default = [ "std" ]
std = [
	"impl-serde/std",
	"ink_e2e_macro/std",
	"pallet-revive/std",
	"scale-info/std",
	"scale/std",
	"serde/std",
	"sp-core/std",
	"sp-keyring/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-runtime-interface/std",
	"sp-weights/std",
	"ink_e2e_macro/std",
	"ink_sandbox?/std",
	"frame-support/std",
]

sandbox = [
    "dep:ink_sandbox",
    "dep:subxt-metadata",
    "ink_e2e_macro/sandbox",
]
