[package]
name = "ink_env"
version.workspace = true
authors = ["Use Ink <ink@use.ink>"]
edition.workspace = true
rust-version = "1.81"

license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ink_env/"
homepage.workspace = true
description = "[ink!] Low-level interface for interacting with the smart contract executor."
keywords.workspace = true
categories.workspace = true
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_allocator = { workspace = true }
ink_storage_traits = { workspace = true }
ink_prelude = { workspace = true }
ink_primitives = { workspace = true }
ink_macro = { workspace = true }
pallet-revive-uapi = { workspace = true }

alloy-sol-types = { workspace = true }
scale = { workspace = true, features = ["max-encoded-len"] }
derive_more = { workspace = true, features = ["from", "display"] }
num-traits = { workspace = true, features = ["i128"] }
cfg-if = { workspace = true }
static_assertions = { workspace = true }
const_env = { workspace = true }
xcm = { workspace = true }
hex-literal = "1.0.0"

# We add the `sp-io` here to disable those features
#xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0", default-features = false }
#sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }

#sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0", default-features = false, features = ["disable_target_static_assertions"] }

#[patch.'https://github.com/paritytech/polkadot-sdk']
##sp-runtime-interface = { git = "https://www.github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0", default-features = false, features = ["disable_target_static_assertions"] }

#sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0", default-features = false }
#sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
#sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, features = ["disable_target_static_assertions"]  }

sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, features = ["disable_target_static_assertions"]  }

[patch.'https://github.com/paritytech/polkadot-sdk']
sp-io = { git = "https://www.github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0" }
sp-runtime-interface = { git = "https://www.github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0" }
sp-core = { git = "https://www.github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0" }
sp-externalities = { git = "https://www.github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0" }
sp-storage = { git = "https://www.github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
polkavm-derive = { workspace = true, default-features = false }

[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
ink_engine = { workspace = true, default-features = true, optional = true }
pallet-revive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "9adb8d28ab1f6744f1fb26db41f42361ac1254a0" }

# Hashes for the off-chain environment.
sha2 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }

# ECDSA for the off-chain environment.
secp256k1 = { workspace = true, features = ["recovery", "global-context"], optional = true }

# schnorrkel for the off-chain environment.
schnorrkel = { version = "0.11.4", optional = true }

# Only used in the off-chain environment.
#
# Sadly couldn't be marked as dev-dependency.
# Never use this crate outside the off-chain environment!
scale-decode = { workspace = true, optional = true }
scale-encode = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
ink = { path = "../ink" }

[features]
default = ["std"]
std = [
    "alloy-sol-types/std",
    "blake2",
    "ink/std",
    "ink_allocator/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_storage_traits/std",
    "ink_engine/std",
    "ink_macro/std",
    "scale/std",
    "scale-decode",
    "scale-encode",
    "scale-info/std",
    "secp256k1",
    "schnorrkel",
    #"sp-io/std",
    #"sp-runtime-interface/std",
    "num-traits/std",
    # Enables hashing crates for off-chain environment.
    "sha2",
    "sha3",
    "scale-decode?/std",
    "scale-encode?/std",
    "xcm/std",
    "derive_more/std"
]

# Enable contract debug messages via `debug_print!` and `debug_println!`.
ink-debug = []

# Disable the ink! provided global memory allocator.
no-allocator = ["ink_allocator/no-allocator"]

# Disable the ink! provided panic handler.
no-panic-handler = []

# For the ui tests, which use this `Cargo.toml`
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values(any()))',
]
