[package]
name = "ink_eth_compatibility"
version = "3.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://docs.rs/ink_eth_compatibility/"
homepage = "https://www.parity.io/"
description = "[ink!] Ethereum related stuff."
keywords = ["wasm", "parity", "webassembly", "blockchain", "ethereum"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
ink_env = { version = "3.0.0-rc6", path = "../env", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
secp256k1 = { version = "0.20.3", default-features = false }

[features]
default = ["std"]
std = [
    "ink_env/std",
]
