[package]
name = "ink"
version.workspace = true
authors = ["Use Ink <ink@use.ink>"]
edition.workspace = true
rust-version = "1.63"

license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ink"
homepage.workspace = true
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords.workspace = true
categories.workspace = true
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_env = { workspace = true }
ink_storage = { workspace = true }
ink_primitives = { workspace = true }
ink_metadata = { workspace = true, optional = true }
ink_prelude = { workspace = true }
ink_macro = { workspace = true }
pallet-revive-uapi = { workspace = true }
alloy-sol-types = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"], optional = true }
derive_more = { workspace = true, features = ["from"] }
const_format = { workspace = true }
keccak-const = { workspace = true }

# TODO add explainer
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }

polkavm-derive = { workspace = true }

[dev-dependencies]
ink_ir = { workspace = true, default-features = true }
ink_metadata = { workspace = true }
trybuild = { workspace = true, features = ["diff"] }

[features]
default = ["std"]
std = [
    "alloy-sol-types/std",
    "ink_env/std",
    "ink_macro/std",
    "ink_metadata/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_storage/std",
    "scale-info/std",
    "scale/std",
    "xcm/std",
    "derive_more/std",
    "sp-io/std"
]

# Enable contract debug messages via `debug_print!` and `debug_println!`.
ink-debug = ["ink_env/ink-debug"]
ink-as-dependency = []

show-codegen-docs = []

# Disable the ink! provided global memory allocator.
no-allocator = ["ink_env/no-allocator"]

# Disable the ink! provided panic handler.
no-panic-handler = ["ink_env/no-panic-handler"]

# For the ui tests, which use this `Cargo.toml`
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values(any()))',
]
